--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p id="hover"></p>
 
 <div id="list-comments">
-	<div class="comment-wrapper">
+	<div class="comment-wrapper" ontouchstart="">
 		<header>
 			<p class="comment-sender">田中 和弘</p>
 			<p class="comment-time-sent">0000年00月00日 00:00</p>
@@ -24,7 +24,7 @@
 		</div>
 		<button class="edit">編集する</button>
 	</div>
-	<div class="comment-wrapper">
+	<div class="comment-wrapper" ontouchstart="">
 		<header>
 			<p class="comment-sender">田中 和弘</p>
 			<p class="comment-time-sent">0000年00月00日 00:00</p>
@@ -35,7 +35,51 @@
 		</div>
 		<button class="edit">編集する</button>
 	</div>
-	<div class="comment-wrapper">
+	<div class="comment-wrapper" ontouchstart="">
+		<header>
+			<p class="comment-sender">田中 和弘</p>
+			<p class="comment-time-sent">0000年00月00日 00:00</p>
+		</header>
+		<div class="comment-content">
+			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+			<p>テキストテキストテキストテキストテキストテキスト</p>
+		</div>
+		<button class="edit">編集する</button>
+	</div>
+	<div class="comment-wrapper" ontouchstart="">
+		<header>
+			<p class="comment-sender">田中 和弘</p>
+			<p class="comment-time-sent">0000年00月00日 00:00</p>
+		</header>
+		<div class="comment-content">
+			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+			<p>テキストテキストテキストテキストテキストテキスト</p>
+		</div>
+		<button class="edit">編集する</button>
+	</div>
+	<div class="comment-wrapper" ontouchstart="">
+		<header>
+			<p class="comment-sender">田中 和弘</p>
+			<p class="comment-time-sent">0000年00月00日 00:00</p>
+		</header>
+		<div class="comment-content">
+			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+			<p>テキストテキストテキストテキストテキストテキスト</p>
+		</div>
+		<button class="edit">編集する</button>
+	</div>
+	<div class="comment-wrapper" ontouchstart="">
+		<header>
+			<p class="comment-sender">田中 和弘</p>
+			<p class="comment-time-sent">0000年00月00日 00:00</p>
+		</header>
+		<div class="comment-content">
+			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+			<p>テキストテキストテキストテキストテキストテキスト</p>
+		</div>
+		<button class="edit">編集する</button>
+	</div>
+	<div class="comment-wrapper" ontouchstart="">
 		<header>
 			<p class="comment-sender">田中 和弘</p>
 			<p class="comment-time-sent">0000年00月00日 00:00</p>
