--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 		</div>
 		<button class="edit">編集する</button>
 	</div>
-	<div class="comment-wrapper" ontouchstart="">
+	<div class="comment-wrapper">
 		<header>
 			<p class="comment-sender">田中 和弘</p>
 			<p class="comment-time-sent">0000年00月00日 00:00</p>
 		</header>
 		<div class="comment-content">
-			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+			<p>これだけ ontouchstart="" 入れてない iOS では反応しない</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
 		<button class="edit">編集する</button>
@@ -99,7 +99,3 @@
 </body>
 <script type="text/javascript" src="js/base.js"></script>
 </html>
-
-
-
-
