--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 
-<p id="hover-and-link"></p>
-
-<p id="hover"></p>
+<div class="buttons-wrapper">
+	<button data-tooltip="アクションありです" class="button button-hover-and-link trigger tooltip" id="hover-and-link">a</button>
+	<button data-tooltip="hover だけです" class="button button-hover tooltip" id="hover">a</button>		
+</div>
 
 <div id="list-comments">
+	<header class="comments-header">
+		コメント
+	</header>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
 			<p class="comment-sender">田中 和弘</p>
@@ -22,7 +26,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit">編集する</button>
+		<button class="edit trigger">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -33,7 +37,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit">編集する</button>
+		<button class="edit trigger">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -44,7 +48,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit">編集する</button>
+		<button class="edit trigger">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -55,7 +59,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit">編集する</button>
+		<button class="edit trigger">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -66,7 +70,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit">編集する</button>
+		<button class="edit trigger">編集する</button>
 	</div>
 	<div class="comment-wrapper">
 		<header>
@@ -77,7 +81,7 @@
 			<p>これだけ ontouchstart="" 入れてない iOS では反応しない</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit">編集する</button>
+		<button class="edit trigger">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -88,7 +92,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit">編集する</button>
+		<button class="edit trigger">編集する</button>
 	</div>
 </div>
 
