--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit trigger">編集する</button>
+		<button class="edit trigger-toast">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -36,7 +36,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit trigger">編集する</button>
+		<button class="edit trigger-toast">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -47,7 +47,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit trigger">編集する</button>
+		<button class="edit trigger-toast">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -58,7 +58,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit trigger">編集する</button>
+		<button class="edit trigger-toast">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -69,7 +69,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit trigger">編集する</button>
+		<button class="edit trigger-toast">編集する</button>
 	</div>
 	<div class="comment-wrapper">
 		<header>
@@ -80,7 +80,7 @@
 			<p>これだけ ontouchstart="" 入れてない iOS では反応しない</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit trigger">編集する</button>
+		<button class="edit trigger-toast">編集する</button>
 	</div>
 	<div class="comment-wrapper" ontouchstart="">
 		<header>
@@ -91,7 +91,7 @@
 			<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			<p>テキストテキストテキストテキストテキストテキスト</p>
 		</div>
-		<button class="edit trigger">編集する</button>
+		<button class="edit trigger-toast">編集する</button>
 	</div>
 </div>
 
