タッチデバイス用の調整

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="buttons-wrapper">
-	<button data-tooltip="アクションありです" class="button button-hover-and-link trigger tooltip" id="hover-and-link">a</button>
+	<button data-tooltip="アクションありです" class="button button-hover-and-link trigger-open-drawer tooltip" id="hover-and-link">a</button>
 	<button data-tooltip="hover だけです" class="button button-hover tooltip" id="hover">a</button>		
 </div>
 
