--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
 <div class="buttons-wrapper">
-	<button data-tooltip="アクションありです" class="button button-hover-and-link trigger-open-drawer tooltip" id="hover-and-link">a</button>
-	<button data-tooltip="hover だけです" class="button button-hover tooltip" id="hover">a</button>		
+	<button data-tooltip="アクションありです" class="button button-hover-and-link trigger-open-drawer tooltip" id="hover-and-link">D</button>
+	<button data-tooltip="hover だけです" class="button button-hover tooltip" id="hover">-</button>		
 </div>
 
 <div id="list-comments">
@@ -94,6 +94,14 @@
 		<button class="edit trigger-toast">編集する</button>
 	</div>
 </div>
+
+<div id="drawer" class="drawer" data-isShown="no">
+	<header class="drawer-header">
+		<p>drawer</p>
+		<button class="button" id="trigger-close-drawer">X</button>
+	</header>
+</div>
+
 
 <div id="toast-layer" data-isShown="no">
 	<p class="toast-message">編集します</p>	
