--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <div id="drawer" class="drawer" data-isShown="no">
 	<header class="drawer-header">
 		<p>drawer</p>
-		<button class="button" id="trigger-close-drawer">X</button>
+		<button class="button tooltip" id="trigger-close-drawer" data-tooltip="閉じる">X</button>
 	</header>
 </div>
 
