ボタン入れ替え

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
 <div class="buttons-wrapper">
-	<button data-tooltip="アクションありです" class="button button-hover-and-link trigger-open-drawer tooltip" id="hover-and-link">D</button>
-	<button data-tooltip="hover だけです" class="button button-hover tooltip" id="hover">-</button>		
+	<button data-tooltip="hover だけ" class="button button-hover tooltip" id="hover">-</button>		
+	<button data-tooltip="アクションあり" class="button button-hover-and-link trigger-open-drawer tooltip" id="hover-and-link">D</button>
 </div>
 
 <div id="list-comments">
